@@ -5,6 +5,9 @@ lldpd (0.6.2)
     + Allow to filter debug logs using tokens. Add more debug logs.
     + lldpctl can now output JSON.
     + Use netlink to gather interface information.
+    + Don't use ioctl for bridges anymore. The configure option
+      `--enable-oldies` allow to reenable their uses for systems not
+      supporting sysfs.
 
 lldpd (0.6.1)
   * Features:
